<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home2"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home2" />
        <!--<item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />-->
        <item
            android:id="@+id/nav_stadium4"
            android:icon="@drawable/ic_stadium2_icon"
            android:title="@string/menu_stadium4" />
        <item
            android:id="@+id/nav_team3c"
            android:icon="@drawable/ic_team1_icon"
            android:title="@string/menu_team3" />
        <item
            android:id="@+id/nav_legends6"
            android:icon="@drawable/ic_legends1_icon"
            android:title="@string/menu_legends6" />
        <item
            android:id="@+id/nav_trophies5"
            android:icon="@drawable/ic_trophy1_icon"
            android:title="@string/menu_trophies5" />
    </group>

    <item
        android:id="@+id/nav_others"
        android:title="@string/menu_others">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_baseline_message_24"
                android:title="@string/menu_contact" />
        </menu>
    </item>
</menu>