<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home2">

    <!--<fragment
        android:id="@+id/nav_home"
        android:name="com.example.splash_to_navigation_menu.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />-->

    <fragment
        android:id="@+id/nav_home2"
        android:name="com.example.splash_to_navigation_menu.Home2Fragment"
        android:label="@string/menu_home2"
        tools:layout="@layout/fragment_home2" />

    <!--<fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.splash_to_navigation_menu.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.splash_to_navigation_menu.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />-->

    <activity
        android:id="@+id/nav_team3c"
        android:name="com.example.splash_to_navigation_menu.MainActivity2"
        android:label="@string/menu_team3"
        tools:layout="@layout/activity_main2" />

    <!--<fragment
        android:id="@+id/nav_team3c"
        android:name="com.example.splash_to_navigation_menu.Team3Fragment"
        android:label="@string/menu_team3"
        tools:layout="@layout/fragment_team3" />-->

    <fragment
        android:id="@+id/nav_stadium4"
        android:name="com.example.splash_to_navigation_menu.Stadium4Fragment"
        android:label="@string/menu_stadium4"
        tools:layout="@layout/fragment_stadium4" />

    <fragment
        android:id="@+id/nav_trophies5"
        android:name="com.example.splash_to_navigation_menu.Trophies5Fragment"
        android:label="@string/menu_trophies5"
        tools:layout="@layout/fragment_trophies5" />

    <fragment
        android:id="@+id/nav_legends6"
        android:name="com.example.splash_to_navigation_menu.Legends6Fragment"
        android:label="@string/menu_legends6"
        tools:layout="@layout/fragment_legends6" />

    <activity
        android:id="@+id/nav_settings"
        android:name="com.example.splash_to_navigation_menu.MainActivitySIVExample"
        android:label="activity_main_sivexample"
        tools:layout="@layout/activity_main_sivexample" />


</navigation>