<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Stadium4Fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/real_madrid_background_grey">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_header_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="430dp"
            android:layout_height="230dp"
            android:layout_marginTop="19dp"
            android:src="@drawable/stadium2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_height="245dp"
            android:layout_width="430dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/stadium3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_stadium1" />

        <TextView
            android:id="@+id/text_stadium"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/proximanova_bold"
            android:paddingStart="@dimen/text_view_padding_side_16dp"
            android:paddingTop="@dimen/text_view_padding_top_8dp"
            android:paddingEnd="@dimen/text_view_padding_side_16dp"
            android:paddingBottom="@dimen/text_view_padding_top_8dp"
            android:text="@string/text_stadium0"
            android:textAlignment="center"
            android:textColor="#0252A0"
            android:textSize="21sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:layout_marginStart="152dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/proximanova_bold"
            android:paddingTop="@dimen/text_view_padding_top_8dp"
            android:paddingBottom="@dimen/text_view_padding_top_8dp"
            android:text="Capacity:"
            android:textAlignment="textEnd"
            android:textColor="@color/real_madrid_black"
            android:textSize="@dimen/text_view_default_font_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_stadium" />

        <TextView
            android:id="@+id/textView36"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:layout_marginStart="148dp"
            android:fontFamily="@font/proximanova_bold"
            android:paddingTop="@dimen/text_view_padding_top_8dp"
            android:paddingBottom="@dimen/text_view_padding_top_8dp"
            android:text="Pitch Size:"
            android:textAlignment="textEnd"
            android:textColor="@color/real_madrid_black"
            android:textSize="@dimen/text_view_default_font_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView34" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/proximanova_alt_light_italic"
            android:paddingTop="@dimen/text_view_padding_top_8dp"
            android:paddingBottom="@dimen/text_view_padding_top_8dp"
            android:text="105m x 68m"
            android:textAlignment="textStart"
            android:textColor="@color/real_madrid_black"
            android:textSize="@dimen/text_view_default_font_size"
            app:layout_constraintStart_toEndOf="@+id/textView36"
            app:layout_constraintTop_toBottomOf="@+id/textView35" />

        <TextView
            android:id="@+id/textView38"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:layout_marginStart="124dp"
            android:fontFamily="@font/proximanova_bold"
            android:paddingTop="@dimen/text_view_padding_top_8dp"
            android:paddingBottom="@dimen/text_view_padding_top_8dp"
            android:text="Pitch Surface:"
            android:textAlignment="textEnd"
            android:textColor="@color/real_madrid_black"
            android:textSize="@dimen/text_view_default_font_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView36" />

        <TextView
            android:id="@+id/textView34"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:layout_marginStart="132dp"
            android:fontFamily="@font/proximanova_bold"
            android:paddingTop="@dimen/text_view_padding_top_8dp"
            android:paddingBottom="@dimen/text_view_padding_top_8dp"
            android:text="Rennovated:"
            android:textAlignment="textEnd"
            android:textColor="@color/real_madrid_black"
            android:textSize="@dimen/text_view_default_font_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView32" />

        <TextView
            android:id="@+id/textView39"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/proximanova_alt_light_italic"
            android:paddingTop="@dimen/text_view_padding_top_8dp"
            android:paddingBottom="@dimen/text_view_padding_top_8dp"
            android:text="Mixto Hybrid Grass"
            android:textAlignment="textStart"
            android:textColor="@color/real_madrid_black"
            android:textSize="@dimen/text_view_default_font_size"
            app:layout_constraintStart_toEndOf="@+id/textView38"
            app:layout_constraintTop_toBottomOf="@+id/textView37" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/proximanova_alt_light_italic"
            android:paddingTop="@dimen/text_view_padding_top_8dp"
            android:paddingBottom="@dimen/text_view_padding_top_8dp"
            android:text="1944 - 1947"
            android:textAlignment="textStart"
            android:textColor="@color/real_madrid_black"
            android:textSize="@dimen/text_view_default_font_size"
            app:layout_constraintStart_toEndOf="@+id/textView32"
            app:layout_constraintTop_toBottomOf="@+id/textView31" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:layout_marginStart="180dp"
            android:fontFamily="@font/proximanova_bold"
            android:paddingTop="@dimen/text_view_padding_top_8dp"
            android:paddingBottom="@dimen/text_view_padding_top_8dp"
            android:text="Built:"
            android:textAlignment="textEnd"
            android:textColor="@color/real_madrid_black"
            android:textSize="@dimen/text_view_default_font_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView30" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/proximanova_alt_light_italic"
            android:paddingTop="@dimen/text_view_padding_top_8dp"
            android:paddingBottom="@dimen/text_view_padding_top_8dp"
            android:text="2019 - 2022"
            android:textAlignment="textStart"
            android:textColor="@color/real_madrid_black"
            android:textSize="@dimen/text_view_default_font_size"
            app:layout_constraintStart_toEndOf="@+id/textView34"
            app:layout_constraintTop_toBottomOf="@+id/textView33" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/proximanova_alt_light_italic"
            android:paddingTop="@dimen/text_view_padding_top_8dp"
            android:paddingBottom="@dimen/text_view_padding_top_8dp"
            android:text="81,044"
            android:textAlignment="textStart"
            android:textColor="@color/real_madrid_black"
            android:textSize="@dimen/text_view_default_font_size"
            app:layout_constraintStart_toEndOf="@+id/textView30"
            app:layout_constraintTop_toBottomOf="@+id/text_stadium" />

        <TextView
            android:id="@+id/text_stadium1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/proximanova_regular"
            android:lineHeight="@dimen/text_view_line_height"
            android:paddingStart="@dimen/text_view_padding_side_16dp"
            android:paddingTop="@dimen/text_view_padding_top_8dp"
            android:paddingEnd="@dimen/text_view_padding_side_16dp"
            android:paddingBottom="@dimen/text_view_padding_top_8dp"
            android:text="@string/text_stadium1"
            android:textColor="@color/real_madrid_black"
            android:textSize="@dimen/text_view_header_font_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView38" />

        <TextView
            android:id="@+id/text_stadium3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/proximanova_regular"
            android:lineHeight="@dimen/text_view_line_height"
            android:paddingStart="@dimen/text_view_padding_side_16dp"
            android:paddingTop="@dimen/text_view_padding_top_8dp"
            android:paddingEnd="@dimen/text_view_padding_side_16dp"
            android:paddingBottom="@dimen/text_view_padding_bottom_16dp"
            android:text="@string/text_stadium2b"
            android:textColor="@color/real_madrid_black"
            android:textSize="@dimen/text_view_header_font_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_stadium2" />

        <TextView
            android:id="@+id/text_stadium2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/proximanova_bold"
            android:paddingStart="@dimen/text_view_padding_side_16dp"
            android:paddingTop="@dimen/text_view_padding_top_8dp"
            android:paddingEnd="@dimen/text_view_padding_side_16dp"
            android:paddingBottom="@dimen/text_view_padding_top_8dp"
            android:text="@string/text_stadium2a"
            android:textAlignment="center"
            android:textColor="#0252A0"
            android:textSize="21sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="216dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>